--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Repin – Personalized Cold Emails & DMs</title>
-<link rel="icon" type="image/png" href="https://github.com/hrishis-projects/repin/blob/main/Repin%20logo%20(1).png?raw=true" />
+<link rel="icon" type="image/png" href="img/Repin logo (1).png" />
 
   <!-- Bricolage Grotesque Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -240,7 +240,7 @@ main .cta {
     <div class="nav-box">
       <div class="logo">
         <img
-          src="https://github.com/hrishis-projects/repin/blob/main/Repin%20logo%20(1).png?raw=true"
+          src="img/Repin logo (1).png"
           alt="Repin logo"
         />
         Repin
