--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Repin – Personalized Cold Emails & DMs</title>
+  <title>Repin | Personalized Cold Emails & DMs</title>
 <link rel="icon" type="image/png" href="img/Repin logo (1).png" />
 
   <!-- Bricolage Grotesque Font -->
@@ -274,4 +274,5 @@ main .cta {
 
 </body>
 </html>
+
 
